syntax = "proto3";
package evmos.feedistr.v1;

option go_package = "github.com/tharsis/evmos/x/feedistr/types";


// ContractWithdrawAddress 
message ContractWithdrawAddress {
  // contract hex address registered on the fee distribution module
  string contract_address = 1;
  // hex address from the registered owner/withdraw address
  string withdraw_address = 2;
}
